<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purplelight"
    android:orientation="vertical"
    tools:context=".WeatherForecastActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:background="@drawable/whiteedittext"
            android:ems="10"
            android:hint="@string/entercity"
            android:paddingLeft="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonWeather"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="5dp"
            android:background="@drawable/whitebutton"
            android:text="@string/weather"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/now"
        android:textColor="@color/gray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/temp"
            android:textColor="@color/gray"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/windyspeed"
            android:textColor="@color/gray"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/pressure"
            android:textColor="@color/gray"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/humidity"
            android:textColor="@color/gray"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textViewTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gray"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewWindySpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gray"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gray"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gray"
            android:textSize="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="°С"
            android:textColor="@color/gray"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="km/h"
            android:textColor="@color/gray"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="mmHg"
            android:textColor="@color/gray"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="%"
            android:textColor="@color/gray"
            android:textSize="20dp" />

    </GridLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/whitebutton"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>