<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AuthorizationActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/startedtitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/img" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/username"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/whiteedittext"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/whiteedittext"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/buttonSignIn2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/greenbutton"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/greenbutton"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>